--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,16 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_launcher_icons: ^0.11.0
+  flutter_local_notifications: ^13.0.0
+  intl_phone_field: ^3.1.0
+  workmanager: ^0.5.0
+  geolocator: ^9.0.2
+  geocoding: ^2.0.5
+  get: ^4.6.5
+  lottie: ^1.2.2
+  get_storage: ^2.0.3
+  dio: ^4.0.6
+  image_picker: ^0.8.6+2
 
 dev_dependencies:
 
@@ -61,6 +71,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
      - assets/images/
+     - assets/lottie/
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
