--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_launcher_icons: ^0.11.0
+  change_app_package_name: ^0.1.3
   flutter_local_notifications: ^13.0.0
   intl_phone_field: ^3.1.0
   workmanager: ^0.5.0
