--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
     sdk: flutter
   flutter_launcher_icons: ^0.11.0
   change_app_package_name: ^0.1.3
+  firebase_core: ^2.7.1
+  firebase_messaging: ^14.2.6
   flutter_local_notifications: ^13.0.0
   intl_phone_field: ^3.1.0
   workmanager: ^0.5.0
