Integrasi visiting list, process dan completed serta pengaturan icon local notification dan detail ticket

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -41,5 +41,7 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+        <meta-data android:name="com.google.android.geo.API_KEY"
+               android:value="AIzaSyCSes59gqnklobk23Fesx5M-Tyw0INLXY4"/>
     </application>
 </manifest>
