--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
+  intl: ^0.18.0
   flutter_launcher_icons: ^0.11.0
   change_app_package_name: ^0.1.3
   firebase_core: ^2.7.1
@@ -44,6 +45,9 @@ dependencies:
   get_storage: ^2.0.3
   dio: ^4.0.6
   image_picker: ^0.8.6+2
+  shimmer: ^2.0.0
+  google_maps_flutter: ^2.2.5
+  flutter_polyline_points: ^1.0.0
 
 dev_dependencies:
 
