--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   intl: ^0.18.0
-  flutter_launcher_icons: ^0.11.0
+  # flutter_launcher_icons: ^0.11.0
   change_app_package_name: ^0.1.3
   firebase_core: ^2.7.1
   firebase_messaging: ^14.2.6
@@ -45,9 +45,14 @@ dependencies:
   get_storage: ^2.0.3
   dio: ^4.0.6
   image_picker: ^0.8.6+2
+  chewie: ^1.4.0
+  video_player: ^2.6.0
   shimmer: ^2.0.0
   google_maps_flutter: ^2.2.5
   flutter_polyline_points: ^1.0.0
+  flutter_svg: ^2.0.4
+  datetime_picker_formfield_new: ^2.1.0
+  signature: ^5.2.1
 
 dev_dependencies:
 
