--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
     sdk: flutter
   intl: ^0.18.0
   # flutter_launcher_icons: ^0.11.0
-  change_app_package_name: ^0.1.3
+  # change_app_package_name: ^0.1.3
   firebase_core: ^2.7.1
   firebase_messaging: ^14.2.6
   flutter_local_notifications: ^13.0.0
@@ -45,7 +45,7 @@ dependencies:
   get_storage: ^2.0.3
   dio: ^4.0.6
   image_picker: ^0.8.6+2
-  chewie: ^1.4.0
+  chewie: 1.8.5
   video_player: ^2.6.0
   shimmer: ^2.0.0
   google_maps_flutter: ^2.2.5
